crates/control-plane-api/src/server/public/graphql/catalog_stats/snapshots/control_plane_api__server__public__graphql__catalog_stats__tests__unauthorized.snap
---
source: crates/control-plane-api/src/server/public/graphql/catalog_stats/mod.rs
expression: response
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 13,
          "line": 3
        }
      ],
      "message": "PermissionDenied: user is not authorized to access prefix or name 'bobCo/nope' with required capability read",
      "path": [
        "catalogStats"
      ]
    }
  ]
}
