crates/control-plane-api/src/server/public/graphql/catalog_stats/snapshots/control_plane_api__server__public__graphql__catalog_stats__tests__unconfigured.snap
---
source: crates/control-plane-api/src/server/public/graphql/catalog_stats/mod.rs
expression: response
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 13,
          "line": 3
        }
      ],
      "message": "catalog stats are not configured",
      "path": [
        "catalogStats"
      ]
    }
  ]
}
